# gtest-cpp-template

./: CMakeLists.txt  CMakeLists.txt.in  README.md
main/: CMakeLists.txt  MainLevel.cpp  MainLevel.h  main.cpp
main/moduleA/: A.cpp  A.h  CMakeLists.txt
test/: CMakeLists.txt  MainLevelTest.cpp
test/moduleA/: ATest.cpp  CMakeLists.txt  ModuleATest.cpp
